--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,7 +39,7 @@ jobs:
         run: |
           v install ldedev.brasilapi
 
-      - name: Move brasilapi source code to V Modules
+      - name: Move brasilapi source code to path start
         run: mv ~/.vmodules/ldedev/brasilapi ~/brasilapi
 
       - name: Verify Fmt
@@ -66,7 +66,7 @@ jobs:
         run: |
           v install ldedev.brasilapi
 
-      - name: Move brasilapi source code to V Modules
+      - name: Move brasilapi source code to path start
         run: mv ~/.vmodules/ldedev/brasilapi ~/brasilapi
 
       - name: Execute Tests using Pure V Backend
