--- a/.github/workflows/documatation.yaml
+++ b/.github/workflows/documatation.yaml
@@ -26,11 +26,9 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: HTML Preview
+      # You may pin to the exact commit or the version.
+      # uses: pavi2410/html-preview-action@9420cd81fbbe0035f59a39536ea5a0443daffa37
+        uses: pavi2410/html-preview-action@v2
+        with:
+          html_file: _docs/index.html
