--- a/.github/workflows/ci-page-doc.yml
+++ b/.github/workflows/ci-page-doc.yml
@@ -28,7 +28,7 @@ jobs:
     strategy:
       matrix:
         os:
-          - ubuntu-18.04
+          - ubuntu-lastest
 
     environment:
       name: github-pages
