correction ci run on ubunutu-22.04

--- a/.github/workflows/ci-page-doc.yml
+++ b/.github/workflows/ci-page-doc.yml
@@ -23,12 +23,7 @@ concurrency:
 
 jobs:
   create-doc:
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-      matrix:
-        os:
-          - ubuntu-lastest
+    runs-on: ubuntu-22.04
 
     environment:
       name: github-pages
